include/El/lapack_like/condense.h

/* ApplyQAfterHermitianTridiag 
   --------------------------- */
EL_EXPORT ElError ElApplyQAfterHermitianTridiag_s
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_s A, ElConstMatrix_s t, ElMatrix_s B );
EL_EXPORT ElError ElApplyQAfterHermitianTridiag_d
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_d A, ElConstMatrix_d t, ElMatrix_d B );
EL_EXPORT ElError ElApplyQAfterHermitianTridiag_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_c A, ElConstMatrix_c t, ElMatrix_c B );
EL_EXPORT ElError ElApplyQAfterHermitianTridiag_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_z A, ElConstMatrix_z t, ElMatrix_z B );
EL_EXPORT ElError ElApplyQAfterHermitianTridiagDist_s
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_s A, ElConstDistMatrix_s t, ElDistMatrix_s B );
EL_EXPORT ElError ElApplyQAfterHermitianTridiagDist_d
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_d A, ElConstDistMatrix_d t, ElDistMatrix_d B );
EL_EXPORT ElError ElApplyQAfterHermitianTridiagDist_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_c A, ElConstDistMatrix_c t, ElDistMatrix_c B );
EL_EXPORT ElError ElApplyQAfterHermitianTridiagDist_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_z A, ElConstDistMatrix_z t, ElDistMatrix_z B );
/* Hessenberg
   ========== */

/* Packed reduction to Hessenberg form, H := Q^H A Q
   ------------------------------------------------- */
EL_EXPORT ElError ElHessenberg_s
( ElUpperOrLower uplo, ElMatrix_s A, ElMatrix_s t );
EL_EXPORT ElError ElHessenberg_d
( ElUpperOrLower uplo, ElMatrix_d A, ElMatrix_d t );
EL_EXPORT ElError ElHessenberg_c
( ElUpperOrLower uplo, ElMatrix_c A, ElMatrix_c t );
EL_EXPORT ElError ElHessenberg_z
( ElUpperOrLower uplo, ElMatrix_z A, ElMatrix_z t );
EL_EXPORT ElError ElHessenbergDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, ElDistMatrix_s t );
EL_EXPORT ElError ElHessenbergDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, ElDistMatrix_d t );
EL_EXPORT ElError ElHessenbergDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, ElDistMatrix_c t );
EL_EXPORT ElError ElHessenbergDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, ElDistMatrix_z t );
/* Only return the similar Hessenberg matrix, H := Q^H A Q
   ------------------------------------------------------- */
EL_EXPORT ElError ElHessenbergOnly_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElHessenbergOnly_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElHessenbergOnly_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElHessenbergOnly_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElHessenbergOnlyDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElHessenbergOnlyDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElHessenbergOnlyDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElHessenbergOnlyDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );
/* Apply Q from a Hessenberg decomposition, H := Q^H A Q
   ----------------------------------------------------- */
EL_EXPORT ElError ElApplyQAfterHessenberg_s
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_s A, ElConstMatrix_s t, ElMatrix_s B );
EL_EXPORT ElError ElApplyQAfterHessenberg_d
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_d A, ElConstMatrix_d t, ElMatrix_d B );
EL_EXPORT ElError ElApplyQAfterHessenberg_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_c A, ElConstMatrix_c t, ElMatrix_c B );
EL_EXPORT ElError ElApplyQAfterHessenberg_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstMatrix_z A, ElConstMatrix_z t, ElMatrix_z B );
EL_EXPORT ElError ElApplyQAfterHessenbergDist_s
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_s A, ElConstDistMatrix_s t, ElDistMatrix_s B );
EL_EXPORT ElError ElApplyQAfterHessenbergDist_d
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_d A, ElConstDistMatrix_d t, ElDistMatrix_d B );
EL_EXPORT ElError ElApplyQAfterHessenbergDist_c
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_c A, ElConstDistMatrix_c t, ElDistMatrix_c B );
EL_EXPORT ElError ElApplyQAfterHessenbergDist_z
( ElLeftOrRight side, ElUpperOrLower uplo, ElOrientation orientation, 
  ElConstDistMatrix_z A, ElConstDistMatrix_z t, ElDistMatrix_z B );