include/El/lapack_like/condense.py


lib.ElApplyQAfterHermitianTridiag_s.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiag_s.restype = c_uint
lib.ElApplyQAfterHermitianTridiag_d.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiag_d.restype = c_uint
lib.ElApplyQAfterHermitianTridiag_c.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiag_c.restype = c_uint
lib.ElApplyQAfterHermitianTridiag_z.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiag_z.restype = c_uint
lib.ElApplyQAfterHermitianTridiagDist_s.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiagDist_s.restype = c_uint
lib.ElApplyQAfterHermitianTridiagDist_d.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiagDist_d.restype = c_uint
lib.ElApplyQAfterHermitianTridiagDist_c.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiagDist_c.restype = c_uint
lib.ElApplyQAfterHermitianTridiagDist_z.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHermitianTridiagDist_z.restype = c_uint
def ApplyQAfterHermitianTridiag(side,uplo,orient,A,t,B):
  if type(A) is not type(t) or type(t) is not type(B):
    raise Exception('Matrix types of {A,t,B} must match')
  if A.tag != t.tag or t.tag != B.tag:
    raise Exception('Datatypes of {A,t,B} must match')
  args = [side,uplo,orient,A.obj,t.obj,B.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElApplyQAfterHermitianTridiag_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterHermitianTridiag_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterHermitianTridiag_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterHermitianTridiag_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElApplyQAfterHermitianTridiagDist_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterHermitianTridiagDist_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterHermitianTridiagDist_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterHermitianTridiagDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Reduction of a square matrix to Hessenberg form by unitary similarity
# =====================================================================
lib.ElHessenbergOnly_s.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnly_s.restype = c_uint
lib.ElHessenbergOnly_d.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnly_d.restype = c_uint
lib.ElHessenbergOnly_c.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnly_c.restype = c_uint
lib.ElHessenbergOnly_z.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnly_z.restype = c_uint
lib.ElHessenbergOnlyDist_s.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnlyDist_s.restype = c_uint
lib.ElHessenbergOnlyDist_d.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnlyDist_d.restype = c_uint
lib.ElHessenbergOnlyDist_c.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnlyDist_c.restype = c_uint
lib.ElHessenbergOnlyDist_z.argtypes = [c_uint,c_void_p]
lib.ElHessenbergOnlyDist_z.restype = c_uint
lib.ElHessenberg_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenberg_s.restype = c_uint
lib.ElHessenberg_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenberg_d.restype = c_uint
lib.ElHessenberg_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenberg_c.restype = c_uint
lib.ElHessenberg_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenberg_z.restype = c_uint
lib.ElHessenbergDist_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenbergDist_s.restype = c_uint
lib.ElHessenbergDist_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenbergDist_d.restype = c_uint
lib.ElHessenbergDist_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenbergDist_c.restype = c_uint
lib.ElHessenbergDist_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHessenbergDist_z.restype = c_uint
def Hessenberg(uplo,A,hessOnly=False):
  if type(A) is Matrix:
    if hessOnly:
      args = [uplo,A.obj]
      if   A.tag == sTag: lib.ElHessenbergOnly_s(*args)
      elif A.tag == dTag: lib.ElHessenbergOnly_d(*args) 
      elif A.tag == cTag: lib.ElHessenbergOnly_c(*args)
      elif A.tag == zTag: lib.ElHessenbergOnly_z(*args)
      else: DataExcept()
    else:
      t = Matrix(A.tag)
      args = [uplo,A.obj,t.obj]
      if   A.tag == sTag: lib.ElHessenberg_s(*args)
      elif A.tag == dTag: lib.ElHessenberg_d(*args)
      elif A.tag == cTag: lib.ElHessenberg_c(*args)
      elif A.tag == zTag: lib.ElHessenberg_z(*args)
      else: DataExcept()
      return t
  elif type(A) is DistMatrix:
    if hessOnly:
      args = [uplo,A.obj]
      if   A.tag == sTag: lib.ElHessenbergOnlyDist_s(*args)
      elif A.tag == dTag: lib.ElHessenbergOnlyDist_d(*args) 
      elif A.tag == cTag: lib.ElHessenbergOnlyDist_c(*args)
      elif A.tag == zTag: lib.ElHessenbergOnlyDist_z(*args)
      else: DataExcept()
    else:
      t = DistMatrix(A.tag,STAR,STAR,A.Grid())
      args = [uplo,A.obj,t.obj]
      if   A.tag == sTag: lib.ElHessenbergDist_s(*args)
      elif A.tag == dTag: lib.ElHessenbergDist_d(*args)
      elif A.tag == cTag: lib.ElHessenbergDist_c(*args)
      elif A.tag == zTag: lib.ElHessenbergDist_z(*args)
      else: DataExcept()
      return t
  else: TypeExcept()

lib.ElApplyQAfterHessenberg_s.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenberg_s.restype = c_uint
lib.ElApplyQAfterHessenberg_d.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenberg_d.restype = c_uint
lib.ElApplyQAfterHessenberg_c.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenberg_c.restype = c_uint
lib.ElApplyQAfterHessenberg_z.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenberg_z.restype = c_uint
lib.ElApplyQAfterHessenbergDist_s.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenbergDist_s.restype = c_uint
lib.ElApplyQAfterHessenbergDist_d.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenbergDist_d.restype = c_uint
lib.ElApplyQAfterHessenbergDist_c.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenbergDist_c.restype = c_uint
lib.ElApplyQAfterHessenbergDist_z.argtypes = \
  [c_uint,c_uint,c_uint,c_void_p,c_void_p,c_void_p]
lib.ElApplyQAfterHessenbergDist_z.restype = c_uint
def ApplyQAfterHessenberg(side,uplo,orient,A,t,B):
  if type(A) is not type(t) or type(t) is not type(B):
    raise Exception('Matrix types of {A,t,B} must match')
  if A.tag != t.tag or t.tag != B.tag:
    raise Exception('Datatypes of {A,t,B} must match')
  args = [side,uplo,orient,A.obj,t.obj,B.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElApplyQAfterHessenberg_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterHessenberg_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterHessenberg_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterHessenberg_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElApplyQAfterHessenbergDist_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterHessenbergDist_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterHessenbergDist_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterHessenbergDist_z(*args)
    else: DataExcept()
  else: TypeExcept()
